Uploading modified Setup_page.html

--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -22,6 +22,10 @@
       <input type="text" id="hwt" name="hwt"><br><br>
       <label for="cwt">Cold wall temperature</label>
       <input type="text" id="cwt" name="cwt"><br><br>
+      <label for="hwt">Hot wall temperature</label>
+      <input type="text" id="hwt" name="hwt"><br><br>
+
+
       <input type="submit" value="Submit">
     </form> 
   </body>
