Small error fixed

--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -22,11 +22,14 @@
                           that characterise water convection between 25-35 Celsius degree, 
                           at sea-level pressure. 
                           You can try modifing them: </h3>  
+    <p id="warning two"> All parameters are approximed as linear functions of temperature. 
+                         Pay extra attention when choosing temperatures close to 4 Celsius degrees.
+                         User is advised to choose temperatures in the range [15-55] Celsius. </p>
       <form action="" method="get">
-      <label for="hwt">Hot wall temperature (in Celsius)</label>
-      <input type="text" placeholder="35" id="hwt" name="hwt"><br><br>
       <label for="cwt">Cold wall temperature (in Celsius)</label>
       <input type="text" placeholder="25" id="cwt" name="cwt"><br><br>
+      <label for="hwt">Hot wall temperature (in Celsius)</label>
+      <input type="text" placeholder="35" id="hwt" name="hwt"><br><br>
 
       <h4 id="RAY" > Rayleigh number is a dimensionless number associated 
                      with buoyancy-driven flow, also known as natural convection. </h4>
