--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -22,20 +22,21 @@
     <h1 id="title"> Setup Convection parameters </h1>
     <h2 id="warning">Warning: </h2>
     <h3 id= "warning text">In the following input boxes, the user will find the parameters 
-                          that characterise water convection between 25-35 Celsius degree, 
+                          that characterise liquid water convecting between 25-35 Celsius degree, 
                           at sea-level pressure. 
                           You can try modifing them: </h3>  
     <p id="warning_two"> All parameters are approximed as linear functions of temperature. 
                          Pay extra attention when choosing temperatures close to 4 Celsius degrees. </p>
-    <p id="warning_three"> User is advised to choose intervals of maximum 15degrees, to ensure the validity 
+    <p id="warning_three"> User is advised to choose intervals of maximum 10 degrees, to ensure the validity 
                          of the simulation (linearized). </p>
       <form action="" method="get">
-      <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 10000. </h4>
+
+      <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 6000. </h4>
       <p id="time_2"> First convection cells are usually completed by the 2900th cicle.  </p>
       <label for= "smlt time">Simulation duration (steps)</label>
+      <input type="text" placeholder="3000" id="smlt time" name="smlt time"><br><br>
  
-      <input type="text" placeholder="5000" id="smlt time" name="smlt time"><br><br>
-      <label for="cwt">Cold wall temperature (in Celsius)</label>
+     <label for="cwt">Cold wall temperature (in Celsius)</label>
       <input type="text" placeholder="25" id="cwt" name="cwt"><br><br>
       <label for="hwt">Hot wall temperature (in Celsius)</label>
       <input type="text" placeholder="35" id="hwt" name="hwt"><br><br>
@@ -46,7 +47,7 @@
                      value, denotes laminar flow, and heat transfer is by 
                      conduction rather than convection. Over the critical value, 
                      it denotes turbulent flow with convection cells. </p>
-      <label for="Ray"> Rayleigh number (adimensional):</label>
+      <label for="Ray"> Rayleigh number (150):</label>
       <input type="text" placeholder="1e2" id="Ray" name="Ray"><br><br>
 
       <h4 id="PR" >Prandtl  number is a dimensioneless number defined
