Setup page fixed for working ranges

--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -47,23 +47,23 @@
                      value, denotes laminar flow, and heat transfer is by 
                      conduction rather than convection. Over the critical value, 
                      it denotes turbulent flow with convection cells. </p>
-      <label for="Ray"> Rayleigh number (150):</label>
-      <input type="text" placeholder="1e2" id="Ray" name="Ray"><br><br>
+      <label for="Ray"> Rayleigh number (working range 50-150):</label>
+      <input type="text" placeholder="100" id="Ray" name="Ray"><br><br>
 
       <h4 id="PR" >Prandtl  number is a dimensioneless number defined
                    as the ratio of momentum diffusivity 
                    to thermal diffusivity: </h4>
       <p id="PR_2" > For Pr ≪ 1 the thermal diffusivity dominatest the behavior, while for 
                       Pr ≫ 1 the momentum diffusivity dominates.  </p>
-      <label for="Pr">Prandtl number(adimensional):</label>
+      <label for="Pr">Prandtl number(working range 5-9):</label>
       <input type="text" placeholder="7" id="Pr" name="Pr"><br><br>
 
       <h4 id="REY" >Reynolds number is a dimensioneless number that 
                     helps predict flow patterns in different fluid flow situations. </h4>
       <p id="REY_2" > At low Reynolds numbers, flows tends to be laminar,
                        while at high Reynolds numbers flows tend to be turbulent. </p>
-      <label for="Rey">Reynolds number(adimensional):</label>
-      <input type="text" placeholder="1e2" id="Rey" name="Rey"><br><br>
+      <label for="Rey">Reynolds number(working range: 70-130):</label>
+      <input type="text" placeholder="100" id="Rey" name="Rey"><br><br>
 
       <input type="submit" value="Submit">
     </form> 
