--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -25,10 +25,7 @@
                           that characterise liquid water convecting between 25-35 Celsius degree, 
                           at sea-level pressure. 
                           You can try modifing them: </h3>  
-    <p id="warning_two"> All parameters are approximed as linear functions of temperature. 
-                         Pay extra attention when choosing temperatures close to 4 Celsius degrees. </p>
-    <p id="warning_three"> User is advised to choose intervals of maximum 10 degrees, to ensure the validity 
-                         of the simulation (linearized). </p>
+
       <form action="" method="get">
 
       <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 6000. </h4>
@@ -36,7 +33,12 @@
       <label for= "smlt time">Simulation duration (steps)</label>
       <input type="text" placeholder="3000" id="smlt time" name="smlt time"><br><br>
  
-     <label for="cwt">Cold wall temperature (in Celsius)</label>
+      <h4 id="warning_three"> User is advised to choose intervals of maximum 10 degrees, to ensure the validity
+                              of the simulation (linearized). </h4>
+      <p id="warning_two"> All parameters are approximed as linear functions of temperature.
+                           Pay attention when choosing temperatures close to 4 Celsius degrees. </p>
+
+      <label for="cwt">Cold wall temperature (in Celsius)</label>
       <input type="text" placeholder="25" id="cwt" name="cwt"><br><br>
       <label for="hwt">Hot wall temperature (in Celsius)</label>
       <input type="text" placeholder="35" id="hwt" name="hwt"><br><br>
