working on non-standard symbols

--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -52,8 +52,8 @@
       <h4 id="PR" >Prandtl  number is a dimensioneless number defined
                    as the ratio of momentum diffusivity 
                    to thermal diffusivity: </h4>
-      <p id="PR_2" > For Pr ≪ 1 the thermal diffusivity dominatest the behavior, while for 
-                      Pr ≫ 1 the momentum diffusivity dominates.  </p>
+      <p id="PR_2" > For Pr < < 1 the thermal diffusivity dominatest the behavior, while for 
+                      Pr > > 1 the momentum diffusivity dominates.  </p>
       <label for="Pr">Prandtl number(working range 5-9):</label>
       <input type="text" placeholder="7" id="Pr" name="Pr"><br><br>
 
