--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -23,13 +23,14 @@
                           at sea-level pressure. 
                           You can try modifing them: </h3>  
 
-      <form action="" method="get">
+      <form action="" method="get" autocomplete="on">
 
       <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 6000. </h4>
       <p id="time_2"> First convection cells are usually completed by the 2900th cicle.  </p>
       <label for= "smlt time">Simulation duration (steps)</label>
       <input type="text" placeholder="3000" id="smlt time" name="smlt time"><br><br>
- 
+      <input type="hidden" name="placeholderKeeper" value="3000"><br><br>  
+
       <h4 id="warning_three"> User is advised to choose intervals of maximum 10 degrees, to ensure the validity
                               of the simulation (linearized). </h4>
       <p id="warning_two"> All parameters are approximed as linear functions of temperature.
