--- a/cnt/Process_page.html
+++ b/cnt/Process_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="data:,">
     <title> LOADING </title>
     <style language="text/css">
     </style>
