--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="data:,">
     <title> Setup Convection Parameters </title>
     <style language="text/css">
       body {
