--- a/cnt/Process_page.html
+++ b/cnt/Process_page.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <script language="text/javascript">
-      let socket = new WebSocket("ws://" + location.host);
+      let socket = new WebSocket("ws://" + location.host /* 8000 */);
       //while(1) {
       //  console.log("Hello world!");
       //}
