Finished m_frame_builder UNTESTED

--- a/cnt/Process_page.html
+++ b/cnt/Process_page.html
@@ -5,14 +5,34 @@
     <title> Processing </title>
     <style language="text/css">
     </style>
-  </head>
-  <body>
     <script language="text/javascript">
-      let socket = new WebSocket("ws://" + location.host /* 8000 */);
-      //while(1) {
-      //  console.log("Hello world!");
-      //}
+      function setup() {
+        let socket = new WebSocket("ws://" + location.hostname + ":8000");
+        socket.onopen = function(e) {
+          alert("[open] Connessione stabilita");
+          alert("Invio al server");
+          socket.send("Il mio nome è John");
+        };
+        socket.onmessage = function(event) {
+          alert(`[message] Ricezione dati dal server: ${event.data}`);
+        };
+        socket.onclose = function(event) {
+          if (event.wasClean) {
+            alert(`[close] Connessione chiusa con successo, code=${event.code} reason=${event.reason}`);
+          } else {
+            // e.g. processo del server terminato o connessione già
+            // in questo caso event.code solitamente è 1006
+            alert('[close] Connection morta.');
+          }
+        };
+        socket.onerror = function(error) {
+          alert(`[error] ${error.message}`);
+        };
+      }
     </script>
+
+  </head>
+  <body onload="setup();">
     <label for="bar">Process:</label>
     <progress id="bar" max="1" value="0"></progress>
   </body>
