--- a/cnt/Process_page.html
+++ b/cnt/Process_page.html
@@ -10,17 +10,23 @@
               .join('');
       }
       function init() {
-        let mask = 0xe1e01cca;
         let socket = new WebSocket("ws://" + location.hostname + ":8000");
         socket.binaryType = "arraybuffer";
         socket.onopen = function(e) {
           console.log("INFO: init: Connessione stabilita");
         };
         socket.onmessage = function(event) {
+          let data = event.data;
+          let dv = new DataView(data);
+          let eta = dv.getUint32(0);
+          let velocity = dv.getUint32(4);
+          let total = dv.getUint32(8);
+          /*
           let eta, velocity, total;
-          eta = ((event.data & 0xFFFFFFFF0000000000000000) >> 8)
-          velocity = ((event.data & 0x00000000FFFFFFFF00000000) >> 4)
-          total = ((event.data & 0x0000000000000000FFFFFFFF) >> 0)
+          eta = event.data.slice(0,8);
+          velocity = event.data.slice(8,);
+          total = event.data
+          */
           console.log(buf2hex(event.data));
           console.log("eta = ", eta, "; velocity = ", velocity, "; total = ", total);
         };
