--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -79,7 +79,7 @@
       <input type="number" placeholder="100" id="Rey" name="Rey" value=100 step=0.1 max=130 min=70 required><br><br>
 
       <input type="submit" value="Submit">
-      <input type="reset">
+      <input type="reset" value="Reset">
     </form> 
   </body>
 </html>
