--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -39,19 +39,18 @@
 
       <form id="myForm" action="" method="get" autocomplete="on" onsubmit="return validateForm()">
 
-      <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 6000. </h4>
+      <h4 id="time" > This input box allows the user to select the duration of the simulation. Maximum number of steps is 5000. </h4>
       <p id="time_2"> First convection cells are usually completed by the 2900th cicle.  </p>
       <label for= "steps">Simulation duration (steps)</label>
       <input type="number" placeholder="3000" id="steps" name="steps" value=3000 step=1 max=5000 min=1 required><br><br>
 
-      <h4 id="warning_three"> User is advised to choose intervals of maximum 10 degrees, to ensure the validity
+      <h4 id="warning_three"> User is must choose intervals of maximum 10 degrees, to ensure the validity
                               of the simulation (linearized). </h4>
       <p id="warning_two"> All parameters are approximed as linear functions of temperature.
-                           Pay attention when choosing temperatures close to 4 Celsius degrees. </p>
-
-      <label for="cwt">Cold wall temperature (in Celsius)</label>
+                           Minimum temperature difference is 0,1 degree. Precision is set at 0,1 degree. </p>
+      <label for="cwt">Cold wall temperature (in Celsius: working range 4-98,9 C)</label>
       <input type="number" placeholder="25" id="cwt" name="cwt" value=25 step=0.1 max=98 min=4 required><br><br>
-      <label for="hwt">Hot wall temperature (in Celsius)</label>
+      <label for="hwt">Hot wall temperature (in Celsius, working range 4,1-99 C)</label>
       <input type="number" placeholder="35" id="hwt" name="hwt" value=35 step=0.1 max=99 min=15 required><br><br>
 
       <h4 id="RAY" > Rayleigh number is a dimensionless number associated 
@@ -59,7 +58,7 @@
       <p id="RAY_2" >It characterises the fluid's flow regime: below a critical 
                      value, denotes laminar flow, and heat transfer is by 
                      conduction rather than convection. Over the critical value, 
-                     it denotes turbulent flow with convection cells. </p>
+                     it denotes turbulent flow with convection cells. Must be an integer. </p>
       <label for="Ray"> Rayleigh number (working range 50-150):</label>
       <input type="number" placeholder="100" id="Ray" name="Ray" value=100 step=0.1 max=150 min=50 required><br><br>
 
@@ -67,14 +66,14 @@
                    as the ratio of momentum diffusivity 
                    to thermal diffusivity: </h4>
       <p id="PR_2" > For Pr < < 1 the thermal diffusivity dominatest the behavior, while for 
-                      Pr > > 1 the momentum diffusivity dominates.  </p>
+                      Pr > > 1 the momentum diffusivity dominates. Must be an integer. </p>
       <label for="Pr">Prandtl number(working range 5-9):</label>
       <input type="number" placeholder="7" id="Pr" name="Pr" value=7 step=0.1 max=9 min=5 required><br><br>
 
       <h4 id="REY" >Reynolds number is a dimensioneless number that 
                     helps predict flow patterns in different fluid flow situations. </h4>
       <p id="REY_2" > At low Reynolds numbers, flows tends to be laminar,
-                       while at high Reynolds numbers flows tend to be turbulent. </p>
+                       while at high Reynolds numbers flows tend to be turbulent. Must be an integer. </p>
       <label for="Rey">Reynolds number(working range: 70-130):</label>
       <input type="number" placeholder="100" id="Rey" name="Rey" value=100 step=0.1 max=130 min=70 required><br><br>
 
