--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -8,13 +8,14 @@
         let cwt = document.forms["myForm"]["cwt"].value;
         let hwt = document.forms["myForm"]["hwt"].value;
         if (cwt > hwt) {
-          //innerHTML flashing red
+          document.getElementById('hwt_label').style.color = "red";
+          document.getElementById('cwt_label').style.color = "red";
           return false;
         } else if (cwt == hwt) {
-          //innerHTML flashing red
+          document.getElementById('warning_two').style.color = "red";
           return false;
         } else if ((hwt - cwt) > 10 ) {
-          //innerHTML flashing red
+          document.getElementById('warning_three').style.color = "red";
           return false;
         }
         return true;
@@ -48,9 +49,9 @@
                               of the simulation (linearized). </h4>
       <p id="warning_two"> All parameters are approximed as linear functions of temperature.
                            Minimum temperature difference is 0,1 degree. Precision is set at 0.1 degree. </p>
-      <label for="cwt">Cold wall temperature (in Celsius: working range 4-98.9 C)</label>
+      <label id="cwt_label" for="cwt">Cold wall temperature, must be colder than "Hot wall temperature" (in Celsius: working range 4-98.9C)</label>
       <input type="number" placeholder="25" id="cwt" name="cwt" value=25 step=0.1 max=98 min=4 required><br><br>
-      <label for="hwt">Hot wall temperature (in Celsius, working range 4.1-99 C)</label>
+      <label id="hwt_label" for="hwt">Hot wall temperature, must be hotter than "Cold wall temperature" (in Celsius, working range 4.1-99 C)</label>
       <input type="number" placeholder="35" id="hwt" name="hwt" value=35 step=0.1 max=99 min=15 required><br><br>
 
       <h4 id="RAY" > Rayleigh number is a dimensionless number associated 
