--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -59,7 +59,7 @@
       <p id="RAY_2" >It characterises the fluid's flow regime: below a critical 
                      value, denotes laminar flow, and heat transfer is by 
                      conduction rather than convection. Over the critical value, 
-                     it denotes turbulent flow with convection cells. Must be an integer. </p>
+                     it denotes turbulent flow with convection cells. </p>
       <label for="Ray"> Rayleigh number (working range 50-150):</label>
       <input type="number" placeholder="100" id="Ray" name="Ray" value=100 step=0.1 max=150 min=50 required><br><br>
 
@@ -67,14 +67,14 @@
                    as the ratio of momentum diffusivity 
                    to thermal diffusivity: </h4>
       <p id="PR_2" > For Pr < < 1 the thermal diffusivity dominatest the behavior, while for 
-                      Pr > > 1 the momentum diffusivity dominates. Must be an integer. </p>
+                      Pr > > 1 the momentum diffusivity dominates. </p>
       <label for="Pr">Prandtl number(working range 5-9):</label>
       <input type="number" placeholder="7" id="Pr" name="Pr" value=7 step=0.1 max=9 min=5 required><br><br>
 
       <h4 id="REY" >Reynolds number is a dimensioneless number that 
                     helps predict flow patterns in different fluid flow situations. </h4>
       <p id="REY_2" > At low Reynolds numbers, flows tends to be laminar,
-                       while at high Reynolds numbers flows tend to be turbulent. Must be an integer. </p>
+                       while at high Reynolds numbers flows tend to be turbulent. </p>
       <label for="Rey">Reynolds number(working range: 70-130):</label>
       <input type="number" placeholder="100" id="Rey" name="Rey" value=100 step=0.1 max=130 min=70 required><br><br>
 
