--- a/cnt/Setup_page.html
+++ b/cnt/Setup_page.html
@@ -7,7 +7,7 @@
       function validateForm() {
         let cwt = document.forms["myForm"]["cwt"].value;
         let hwt = document.forms["myForm"]["hwt"].value;
-        if (cwt > hwt) {
+        if ((hwt - cwt) < 0) {
           document.getElementById('hwt_label').style.color = "red";
           document.getElementById('cwt_label').style.color = "red";
           return false;
@@ -52,7 +52,7 @@
       <label id="cwt_label" for="cwt">Cold wall temperature, must be colder than "Hot wall temperature" (in Celsius: working range 4-98.9C)</label>
       <input type="number" placeholder="25" id="cwt" name="cwt" value=25 step=0.1 max=98 min=4 required><br><br>
       <label id="hwt_label" for="hwt">Hot wall temperature, must be hotter than "Cold wall temperature" (in Celsius, working range 4.1-99 C)</label>
-      <input type="number" placeholder="35" id="hwt" name="hwt" value=35 step=0.1 max=99 min=15 required><br><br>
+      <input type="number" placeholder="35" id="hwt" name="hwt" value=35 step=0.1 max=99 min=4.1 required><br><br>
 
       <h4 id="RAY" > Rayleigh number is a dimensionless number associated 
                      with buoyancy-driven flow, also known as natural convection. </h4>
